force-app/main/default/objects/Asset/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <type>TextArea</type>
</CustomField>