force-app/main/default/objects/Asset/fields/Vehicle_Model__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Model__c</fullName>
    <label>Vehicle Model</label>
    <type>TextArea</type>
</CustomField>