force-app/main/default/objects/Asset/fields/Vehicle_Registration_Plate__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Registration_Plate__c</fullName>
    <label>Vehicle Registration Plate</label>
    <type>TextArea</type>
</CustomField>