force-app/main/default/objects/Asset/recordTypes/Fleet_Vehicles.recordType-meta.xml
<RecordType>
    <fullName>Fleet_Vehicles</fullName>
    <active>true</active>
    <label>Fleet Vehicles</label>
</RecordType>